spectec/test/interp/neg/non-boolean-condition.imp
// An if-condition must be a boolean, but here it is an int.
int x = 0;
if x then x = 1 else x = 2 end
